# last_performed_operation

./: .gitignore  README.md  pyproject.toml
src/: main.py  utils.py
tests/: test.main.py  test_utils.py
