[tool.poetry]
name = "last-performed-operations"
version = "0.1.0"
description = ""
authors = ["Max9222 <maxoog@bk.ru>"]
readme = "README.md"
packages = [{include = "last_performed_operations"}]

[tool.poetry.dependencies]
python = "^3.11"
colorama = "^0.4.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
